--- a/package.json
+++ b/package.json
@@ -5,9 +5,22 @@
   "repository": "git@github.com:dehemart/pc-api.git",
   "author": "dehemart <martins.denis@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "jest"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
+  },
   "devDependencies": {
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "^8.25.0"
+    "eslint": "^8.25.0",
+    "jest": "^29.2.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
