--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.25.0",
-    "jest": "^29.2.0",
+    "jest": "^29.2.1",
+    "node-notifier": "^10.0.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
