--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "moduleResolution": "Node",
     "baseUrl": ".",
     "paths": {
-      "@Entities/*": ["src/domain/entities/*"]
+      "@Entities/*": ["src/domain/entities/*"],
+      "@Ports/*": ["src/domain/ports/*"]
     },
     "resolveJsonModule": true,
     "outDir": "dist",
